added movedialog, but doesnt compile

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,14 @@
 # Set the source files for the main project
 set(SRC_FILES
     main.cpp
+    MoveDialog.cpp
     addition.cpp
     bar.cpp
 )
 
 # Set the header files for the main project
 set(HEADER_FILES
+    MoveDialog.h
     addition.h
     bar.h
 )
