Fixed executable creating error

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,16 +2,15 @@
 set(SRC_FILES
     main.cpp
     MoveDialog.cpp
-    addition.cpp
-    bar.cpp
 )
 
 # Set the header files for the main project
 set(HEADER_FILES
     MoveDialog.h
-    addition.h
-    bar.h
 )
 
 # Add the executable or library
 add_library(src STATIC ${SRC_FILES} ${HEADER_FILES})
+
+add_executable(Chess main.cpp)
+target_link_libraries(Chess PRIVATE src)
