--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,10 +2,10 @@
 add_executable(my_tests
     test_main.cpp
     Board_test.cpp
-    Coord_test.cpp
     LegalityChecker_test.cpp
     MoveDialog_test.cpp
     Piece_test.cpp
+    Square_test.cpp
 )
 
 # Link with GTest
