--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,6 +2,7 @@
 add_executable(my_tests
     test_main.cpp
     Board_test.cpp
+    DangerChecker_test.cpp
     LegalityChecker_test.cpp
     MoveDialog_test.cpp
     Piece_test.cpp
