Castle: there are no pieces in between

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Add test source
 add_executable(my_tests
     test_main.cpp
-    Board_test.cpp
+    # Board_test.cpp
     CastleChecker_test.cpp
     # DangerChecker_test.cpp
     # LegalityChecker_test.cpp
