--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,8 +1,8 @@
 # Add test source
 add_executable(my_tests
     test_main.cpp
-    # Board_test.cpp
-    CastleChecker_test.cpp
+    Board_test.cpp
+    # CastleChecker_test.cpp
     # DangerChecker_test.cpp
     # LegalityChecker_test.cpp
     # MoveDialog_test.cpp
