--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,14 +1,15 @@
 # Add test source
 add_executable(my_tests
     test_main.cpp
-    Board_test.cpp
-    CastleChecker_test.cpp
-    CheckChecker_test.cpp
-    DangerChecker_test.cpp
-    LegalityChecker_test.cpp
-    MoveDialog_test.cpp
-    Piece_test.cpp
-    Square_test.cpp
+    # Board_test.cpp
+    # CastleChecker_test.cpp
+    # CheckChecker_test.cpp
+    # DangerChecker_test.cpp
+    # LegalityChecker_test.cpp
+    # MoveDialog_test.cpp
+    MoveParser_test.cpp
+    # Piece_test.cpp
+    # Square_test.cpp
 )
 
 # Link with GTest
