--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,7 +6,7 @@ add_executable(my_tests
     # CheckChecker_test.cpp
     # DangerChecker_test.cpp
     # LegalityChecker_test.cpp
-    # MoveDialog_test.cpp
+    MoveDialog_test.cpp
     MoveParser_test.cpp
     # Piece_test.cpp
     # Square_test.cpp
