--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,8 @@
 # Add test source
 add_executable(my_tests
     test_main.cpp
-    Board_test.cpp
+    # Board_test.cpp
+    BoardHistory_test.cpp
     # CastleChecker_test.cpp
     # CheckChecker_test.cpp
     # DangerChecker_test.cpp
